--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <h1>Cauculadora OOP</h1>
-    <div id="Cauculadora">
+    <div id="Calculadora">
 
         <div id="screen-container">
             <div id="upper-number">0</div>
