--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cauculadora</title>
+    <title>Calculadora</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1>Cauculadora OOP</h1>
+    <h1>Calculadora OOP</h1>
     <div id="Calculadora">
 
         <div id="screen-container">
